# Android-Studio-Mobile

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  build_engine.cpp  native_bridge.cpp  process_manager.cpp  shell_executor.cpp
app/src/main/java/com/rvkedition/androidstudiomobile/: IDEApplication.kt
app/src/main/java/com/rvkedition/androidstudiomobile/backend/cpp/: NativeBridge.kt
app/src/main/java/com/rvkedition/androidstudiomobile/backend/download/: DownloadManager.kt
app/src/main/java/com/rvkedition/androidstudiomobile/backend/python/: PythonServerService.kt  WebSocketClient.kt
app/src/main/java/com/rvkedition/androidstudiomobile/ui/: MainActivity.kt
app/src/main/java/com/rvkedition/androidstudiomobile/ui/about/: AboutDialog.kt
app/src/main/java/com/rvkedition/androidstudiomobile/ui/components/: BuildOutputView.kt  IDEToolbar.kt  WelcomeScreen.kt
app/src/main/java/com/rvkedition/androidstudiomobile/ui/editor/: CodeEditor.kt  EditorTabBar.kt
app/src/main/java/com/rvkedition/androidstudiomobile/ui/filetree/: FileTreePanel.kt
app/src/main/java/com/rvkedition/androidstudiomobile/utils/: FileUtils.kt  ProjectCreator.kt  SyntaxHighlighter.kt  ThemeManager.kt
app/src/main/res/drawable/: ic_build.xml  ic_logo.xml  ic_terminal.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
(+5 files in other folders)
